--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
+    "face-api.js": "^0.22.2",
+    "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   }
